feat(backend): add pytest

--- a/.github/workflows/backend-test.yaml
+++ b/.github/workflows/backend-test.yaml
@@ -41,6 +41,7 @@ jobs:
         run: uv python install
 
       - name: Install dependencies
+        #install only some things like pytest, pytest_asyncio
         run: |
           uv sync --locked --dev
 
