--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -9,7 +9,6 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
-    "httpx>=0.28.1",
     "uvicorn>=0.35.0",
 ]
 
@@ -19,3 +18,10 @@ cd-playground-backend = "backend.main:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "httpx>=0.28.1",
+    "pytest-asyncio>=1.1.0",
+]
