--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -24,7 +24,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: check_code
-    if: ${{ needs.check_code.outputs.backend == 'true' }}
+    if: ${{ needs.check_code.outputs.code-change == 'true' }}
     defaults:
       run:
         working-directory: ./src/frontend
