--- a/src/frontend/pyproject.toml
+++ b/src/frontend/pyproject.toml
@@ -18,3 +18,11 @@ cd-playground-frontend = "frontend.main:main"
 [build-system]
 requires = ["uv_build>=0.8.4,<0.9.0"]
 build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "responses>=0.25.7",
+    "ruff>=0.12.7",
+]
