--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -38,4 +38,16 @@ jobs:
       - name: Set up Python
         run: uv python install
 
+      - name: Sync uv dependencies
+        run: uv sync --locked --dev
+      
+      - name: Check code format with ruff
+        uses: astral-sh/ruff-action@v3
+        with:
+          args: "format --check --diff"
+
+      - name: Run tests for frontend
+        run: uv run pytest
+
+
         
