--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -48,9 +48,6 @@ jobs:
 
       - name: Run tests for frontend
         run: uv run pytest tests/ -v --cov=src/frontend --cov-report=xml --cov-fail-under=80 
-      
-      - name: Debug
-        run: ls -la 
 
       - name: Upload artifact coverage
         uses: actions/upload-artifact@v4
@@ -63,7 +60,7 @@ jobs:
         uses: kuju63/coverage-comment@v1.3.2
         with:
           token: ${{ github.token }}
-          paths: coverage.xml
+          paths: ./src/frontend/coverage.xml
           
 
 
