--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -64,6 +64,7 @@ jobs:
   
   docker-image:
     runs-on: ubuntu-latest
+    needs: test
     defaults:
       run:
         working-directory: './src/frontend'
@@ -81,6 +82,14 @@ jobs:
           image-ref: 'frontend'
           format: 'table'
           severity: 'CRITICAL,HIGH'
+          output: 'trivy-results.md'
+      
+      - name: Make PR comment with summary
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          header: trivy scan report
+          recreate: true
+          path: trivy-results.md
 
 
 
