--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -80,16 +80,14 @@ jobs:
         uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: 'frontend'
-          format: 'table'
+          format: 'sarif'
           severity: 'CRITICAL,HIGH'
-          output: 'trivy-results.md'
+          output: 'trivy-results.sarif'
       
-      - name: Make PR comment with summary
-        uses: marocchino/sticky-pull-request-comment@v2
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
         with:
-          header: trivy scan report
-          recreate: true
-          path: trivy-results.md
+          sarif_file: 'trivy-results.sarif'
 
 
 
