--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -59,15 +59,13 @@ jobs:
       - name: Coverage Report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: ./src/backend/coverage.xml
+          filename: ./src/frontend/coverage.xml
           badge: true
           format: markdown
           output: both
 
       - name: Add Coverage PR Comment
         uses: marocchino/sticky-pull-request-comment@v2
-        #you can add condition for step based on type of commit like pull request
-        if: github.event_name == 'pull_request'
         with:
           header: test-coverage-frontend
           recreate: true
