--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -22,6 +22,7 @@ jobs:
               - 'src/frontend/**'
               - '.github/workflows/frontend-test.yaml'
   test:
+    name: Test Frontend
     runs-on: ubuntu-latest
     needs: check_code
     if: ${{ needs.check_code.outputs.code-change == 'true' }}
@@ -56,12 +57,51 @@ jobs:
           path: ./src/frontend/coverage.xml
           retention-days: 7
       
-      - name: Comment coverage to PR
-        uses: kuju63/coverage-comment@v1.3.2
+      - name: Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          token: ${{ github.token }}
-          paths: ./src/frontend/coverage.xml
-          
+          filename: ./src/frontend/coverage.xml
+          badge: true
+          format: markdown
+          output: both
+
+      - name: Add Coverage PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          header: test-coverage-frontend
+          recreate: true
+          path: code-coverage-results.md
+  
+  docker-image:
+    runs-on: ubuntu-latest
+    needs: test
+    defaults:
+      run:
+        working-directory: './src/frontend'
+    steps:
+      - name: checkout-code
+        uses: actions/checkout@v4
+        
+      - name: build docker image
+        run: |
+          docker build -t frontend .
+      
+      - name: set up trivy scanning
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: 'frontend'
+          format: 'sarif'
+          exit-code: "0"
+          severity: 'CRITICAL,HIGH'
+          ignore-unfixed: true
+          vuln-type: "os,library"
+          output: 'trivy-results.sarif'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results.sarif'
+
 
 
         
