--- a/release-please-config.json
+++ b/release-please-config.json
@@ -10,7 +10,9 @@
          {
            "type": "toml",
            "path": "uv.lock",
-           "jsonpath": "$.package[?(@.name.value=='study-tracker-backend')].version"
+           "jsonpath": "$.package[?(@.name.value=='cd-playground-backend')].version"
+
+
          }
          ]
      }
