--- a/.github/workflows/docker-backend.yaml
+++ b/.github/workflows/docker-backend.yaml
@@ -19,3 +19,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: ./src/backend
+      - name: build docker image
+        uses: docker/login-action@v3
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
