--- a/.github/workflows/docker-backend.yaml
+++ b/.github/workflows/docker-backend.yaml
@@ -11,17 +11,39 @@ permissions:
   contents: read
   packages: write
 
+env:
+  IMAGE_NAME: ${{ github.repository_owner }}/cd-playground-backend
+
 jobs:
   Docker-build-and-push:
     runs-on: ubuntu-latest
     steps:
+
       - name: checkout
         uses: actions/checkout@v4
         with:
           path: ./src/backend
-      - name: build docker image
+
+      - name: docker login to ghcr.io
         uses: docker/login-action@v3
         with:
+          #actor means owner of repo
           username: ${{ github.actor }}
+          #password can be replaced with github token that is created at runtime
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Extract tag name
+        id: tag
+        run: echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: |
+            $IMAGE_NAME:${{ steps.tag.outputs.TAG }}
+            $IMAGE_NAME:latest
