--- a/.github/workflows/docker-backend.yaml
+++ b/.github/workflows/docker-backend.yaml
@@ -45,5 +45,5 @@ jobs:
         with:
           push: true
           tags: |
-           
-            $IMAGE_NAME:latest
+            ghcr.io/$IMAGE_NAME:${{ steps.tag.outputs.TAG }}
+            ghcr.io/$IMAGE_NAME:latest
