ci(gha): added workflow trigger based on new tag

--- a/.github/workflows/docker-backend.yaml
+++ b/.github/workflows/docker-backend.yaml
@@ -2,10 +2,10 @@ name: Build Docker Image and push to GitHub
 
 on:
   push:
-    branches:
-      - feat/docker-push-ghcr
-    #tags:
-    #  - backend*
+    # branches:
+    #   - feat/docker-push-ghcr
+    tags:
+     - backend*
 
 permissions:
   contents: read
