--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -40,7 +40,7 @@ jobs:
         run: uv python install
 
       - name: Sync uv dependencies
-        run: uv sync --locked --dev
+        run: uv sync --dev
       
       - name: Check code format with ruff
         uses: astral-sh/ruff-action@v3
