--- a/.github/workflows/docker-backend.yaml
+++ b/.github/workflows/docker-backend.yaml
@@ -1,11 +1,11 @@
 name: Build Docker Image and push to GitHub
 
 on:
+  workflow_dispatch:
   push:
-    # branches:
-    #   - feat/docker-push-ghcr
     tags:
-     - backend*
+      - backend*
+
 
 permissions:
   contents: read
@@ -21,8 +21,6 @@ jobs:
 
       - name: checkout
         uses: actions/checkout@v4
-        with:
-          path: ./src/backend
 
       - name: docker login to ghcr.io
         uses: docker/login-action@v3
