--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -16,7 +16,7 @@ COPY . /app
 RUN --mount=type=cache,target=/root/.cache/uv \
  # --mount=type=bind,source=uv.lock,target=uv.lock \
 #  --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-  uv sync --locked --no-install-project --no-editable
+  uv sync --no-install-project --no-editable
 
 
 #add user to the image
