--- a/.github/workflows/docker-backend.yaml
+++ b/.github/workflows/docker-backend.yaml
@@ -6,6 +6,7 @@ on:
     #   - feat/docker-push-ghcr
     tags:
      - backend*
+     - frontend*
 
 permissions:
   contents: read
@@ -16,6 +17,7 @@ env:
 
 jobs:
   Docker-build-and-push:
+    if: startsWith(GITHUB_REF.name,'backend')
     runs-on: ubuntu-latest
     steps:
 
