feat(gha): uv sync fixed

--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -14,7 +14,7 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 RUN --mount=type=cache,target=/root/.cache/uv \
   --mount=type=bind,source=uv.lock,target=uv.lock \
   --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-  uv sync --locked --no-install-project --no-editable
+  uv sync --no-install-project --no-editable
 
 #add user to the image
 #adduser and addgroup because its sh shell
