--- a/release-please-config.json
+++ b/release-please-config.json
@@ -10,7 +10,7 @@
          {
            "type": "toml",
            "path": "uv.lock",
-           "jsonpath": "$.package[?(@.name.value=='cd-playground-backend')].version"
+           "jsonpath": "$.package[?(@.name.value=='backend')].version"
          }
          ]
      },
@@ -24,7 +24,7 @@
         {
           "type": "toml",
           "path": "uv.lock",
-          "jsonpath": "$.package[?(@.name.value=='cd-playground-frontend')].version"
+          "jsonpath": "$.package[?(@.name.value=='frontend')].version"
         }
       ]
     }
