--- a/mise.toml
+++ b/mise.toml
@@ -4,6 +4,9 @@
 # mise use python@3.13
 
 [tools]
+k3d = "latest"
+k9s = "latest"
+kubectl = "latest"
 pre-commit = "latest"
 python = "3.13"
 ruff = "latest"
@@ -23,4 +26,10 @@ GITOPS_REPO = 'cd-playground-gitops'
 #enter = "bash ./scripts/setup_project"
 enter = "sh ./scripts/setup_project_sh"
 
+[tasks.k8s-setup-local]
+description = "Set up a basic Kubernetes cluster for development that builds the local images and applies them"
+run = "bash ./kubernetes/setup_cluster_local"
 
+[tasks.k8s-setup-minimal]
+description = "Set up a basic minimal Kubernetes cluster"
+run = "bash ./kubernetes/setup_minimal_cluster_local"
