fix(gha): added k3d set up because it was missing

--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -31,6 +31,10 @@ jobs:
       - name: Sync uv dependencies
         run: uv sync --locked
 
+      - name: Download k3d
+        run: |
+          curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
+
       - name: Execute Python Script
         run: |
           uv run e2e_test.py
